# QtExamples

./: 123.qrc  Icon.qrc  Rules.qrc  abc.qrc  cal1.qrc  cal2.qrc  cal3.qrc  common.h  database.qrc  hedder_fo_rprint.cpp  hedder_fo_rprint.h  hedder_for_print.cpp  hedder_for_print.h  hedder_screen.cpp  hedder_screen.h  hedderforprintreceipt.cpp  hedderforprintreceipt.h  kan1.qm  kan1.ts  kannada.qm  kannada.ts  login.cpp  login.h  main.cpp  mainscreen.cpp  mainscreen.h  menuscreen.cpp  menuscreen.h  mylabel.cpp  mylabel.h  print_file.cpp  print_file.h  printreceipt.cpp  printreceipt.h  settings2.qrc  temp_trans.qrc  temple_modified_working_final.pro  transalation_kannada.qrc
ActiveXExamples/: Qt_Active_Qt.pptx
ActiveXExamples/MyMediaPlayer/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyMediaPlayer.pro  MyMediaWidget.cpp  MyMediaWidget.h  main.cpp
ActiveXExamples/TestCOM/: ISum.h  (+4 more)
QML/160067_Kory_Module/: CMakeLists.txt  README  main.cpp
QML/160067_Kory_Module/Kory/: CMakeLists.txt  KoryMain.qml  TestButton.qml
QML/160067_Kory_Module/UseKoryModule/: CMakeLists.txt  Main.qml  main.cpp
QML/QMLSingleTonIssue/: CMakeLists.txt  Message.cpp  Message.h  README  main.cpp
QML/QMLSingleTonIssue/LogicModule/: CMakeLists.txt  Main.qml  MySingleTon.h  TestStatic.qml  TestStaticLib.cpp  TestStaticLib.h
QML/QMLSingleTonIssue/StaticPlugin/: CMakeLists.txt  StaticPlugin.cpp  StaticPlugin.h
QSignedLongLongIssue/: DataHandler.cpp  DataHandler.h  MyWidget.cpp  MyWidget.h  MyWidget.ui  QSignedLongLongIssue.pro  README.md  main.cpp
SemaphoreBetweenThread/: Consumer.cpp  Consumer.h  MyWidget.cpp  MyWidget.h  MyWidget.ui  Producer.cpp  Producer.h  SemaphoreBetweenThread.pro  main.cpp
TimerEvent/: GPRS.cpp  GPRS.h  TimerEvent.pro  TimerHandling.cpp  TimerHandling.h  TimerHandling.ui  main.cpp
booking_report/: sevabokking_reports.cpp  sevabokking_reports.h
booking_ui/: adminscreen.cpp  adminscreen.h  booking_ui.pri  bookingreport.cpp  bookingreport.h  currentreport.cpp  currentreport.h  fullsevatransactiondetails.cpp  fullsevatransactiondetails.h  seva_booking_back.cpp  seva_booking_back.h  seva_booking_receipt.cpp  seva_booking_receipt.h  seva_receipt.cpp  seva_receipt.h
dbinterface/: dbfile.cpp  dbfile.cpp.autosave  dbfile.h  dbinterface.pri
seva/: addnewseva.cpp  addnewseva.h  seva.pri  seva_type.cpp  seva_type.h  table_view_seva.cpp  table_view_seva.h  table_view_type.cpp  table_view_type.h  tempmange.cpp  tempmange.h
(+198 files in other folders)
